# pms-api-service

./: .env.example  .env.mock  .env.test  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/api/: bookings.py  dependencies.py
src/domain/: booking.py
src/infra/: config.py  mock_pms.py  pms_client.py
src/services/: bookings.py
tests/: conftest.py  test_main.py  test_mock_pms.py
tests/test_bookings/: test_api.py
